--- a/public/css/index.css
+++ b/public/css/index.css
@@ -127,7 +127,7 @@ nav ul li a:hover {
 
 .container {
    padding: 20px;
-   background-color: #ffffff;
+   background-color: #004d44;
 }
 
 /* Footer Styles */
