--- a/public/css/index.css
+++ b/public/css/index.css
@@ -74,7 +74,7 @@ nav ul li a:hover {
 
 /* Main section for Bridgend */
 .bridgend-section {
-    background-image: url('../img/bridgend-background.png'); /* Add your Bridgend background image here */
+    background-image: url('../img/bridgend.png'); /* Add your Bridgend background image here */
     background-size: cover;
     background-position: center;
     text-align: center;
