--- a/public/css/index.css
+++ b/public/css/index.css
@@ -168,7 +168,7 @@ nav ul li a:hover {
 
 .container {
    padding: 20px;
-   background-color: #004d44;
+   background-color: #ffffff;
 }
 
 /* Footer Styles */
